--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -108,7 +108,7 @@ import Layout from "@layouts/Layout.astro";
               <div class="six-col-grid">
   <span class="col-one-img">
                       <img width="120" height="150" loading="lazy" src="images/commercial-refrigerator-repair.webp" alt="Same day commercial refrigerator repair - Los Angeles">
-                      <p>Refrigerator Repair</p>
+                      <p class="services"><a title="Commercial refrigerator Repair Los Angeles" href="/services/commercial-refrigerator-repair-los-angeles"><b>Refrigerator Repair</b></a></p>
                           <a class="grid-a" title="Same day refrigerator repair Los Angeles" href="/book">BOOK US </a>
                         </span>
 
