--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,67 +37,68 @@ import Layout from "@layouts/Layout.astro";
               <span class="col-one-img">
 <img width="120" height="150" src="../images/refrigerator-repair.webp" alt="Same day expert refrigerator repair - Los Angeles">
 <p class="services"><a title="Refrigerator Repair Los Angeles" href="/services/commercial-refrigerator-repair-los-angeles"><b>Refrigerator Repair</b></a></p>
-<a class="grid-a" title="Same day washer repair Los Angeles" href="/book">BOOK US </a>
+<a class="grid-a" title="Book Same Day Appliance Repair Services" href="/book">BOOK US </a>
 </span>
  <span class="col-two-img">
 <img width="120" height="150" src="../images/freezer-stove-repair.webp" alt="Same day expert freezer repair - Los Angeles">
 <p class="services"><a title="Refrigerator Repair Los Angeles" href="/services/freezer-repair"><b>Freezer Repair</b></a></p>
-<a class="grid-a" title='Same day freezer repair Los Angeles' href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+<a class="grid-a" title='Book Same Day Appliance Repair Services' href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
 </span>
  <span class="col-three-img">
 <img width="120" height="150" src="images/washer-repair.webp" alt="Same day expert washer repair - Los Angeles">
 <p class="services"><a title="Refrigerator Repair Los Angeles" href="/services/dishwasher-repair"><b>Washer Repair</b></a></p>
-<a class="grid-a" title="Same day washer repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+<a class="grid-a" title="Book Same Day Appliance Repair Services" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
 </span>
 
  <span class="col-four-img">
                           <img width="120" height="150" src="images/dryer-repair.webp" alt="Same day expert dryer repair - Los Angeles">
                           <p class="services"><a title="Refrigerator Repair Los Angeles" href="/services/dryer-repair"><b>Dryer Repair</b></a></p>
-                          <a class="grid-a" title="Same day dryer repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+                          <a class="grid-a" title="Book Same Day Appliance Repair Services" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
                         </span>
 
  <span class="col-five-img">
                           <img width="120" height="150" src="images/range-stove-repair.webp" alt="Same day expert range/stover repair - Los Angeles">
                           <p class="services"><a title="Stove Repair Los Angeles" href="/services/stove-repair"><b>Range/Stove Repair</b></a></p>
-                          <a class="grid-a" title="Same day range stove repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+                          <a class="grid-a" title="Book Same Day Appliance Repair Services" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
                         </span>
 
                       <span class="col-six-img">
                           <img width="120" height="150" src="images/dishwasher-repair.webp" alt="Same day dishwasher repair - Los Angeles">
                           <p class="services"><a title="Dishwasher Repair Los Angeles" href="/services/dishwasher-repair"><b>Dishwasher Repair</b></a></p>
-                          <a class="grid-a" title="Same day dishwasher repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+                          <a class="grid-a" title="Book Same Day Appliance Repair Services" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
                         </span> 
      <span class="col-seven-img">
      <img width="120" height="150" src="../images/oven-repair.webp" alt="Same day expert refrigerator repair - Los Angeles">
      <p class="services"><a title="Oven Repair Los Angeles" href="/services/oven-repair"><b>Oven Repair</b></a></p>
-     <a class="grid-a" title="Same day oven repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+     <a class="grid-a" title="Book Same Day Appliance Repair Services" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
       </span> 
       <span class="col-eight-img">
       <img width="120" height="150" src="../images/cooktop-repair.webp" alt="Same day expert freezer repair - Los Angeles">
        <p class="services"><a title="Cooktop Repair Los Angeles" href="/services/cooktop-repair"><b>Cooktop Repair</b></a></p>
-       <a class="grid-a" title="Same day freezer repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+       <a class="grid-a" title="Book Same Day Appliance Repair Services" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
                         </span>
                                         <span class="col-nine-img">
                           <img width="120" height="150" src="images/microwave-repair.webp" alt="Same day microwave repair - Los Angeles">
                           <p class="services"><a title="Microwave Repair Los Angeles" href="/services/microwave-repair"><b>Microwave Repair</b></a></p>
-                          <a class="grid-a" title="Same day microvawe repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+                          <a class="grid-a" title="Book Same Day Appliance Repair Services" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
                         </span>
                                           <span class="col-ten-img">
                           <img width="120" height="150" src="images/range-hood-repair.webp" alt="Same day range hood repair - Los Angeles">
                           <p class="services"><a title="Range Hood Repair Los Angeles" href="/services/range-hood-repair"><b>Range Hood Repair</b></a></p>
-                          <a class="grid-a" title="Same day range hood repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+                          <a class="grid-a" title="Book Same Day Appliance Repair Services" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
                         </span>
             
                         <span class="col-eleven-img">
                           <img width="120" height="150" src="images/fireplace-repair.webp" alt="Same day fireplace repair - Los Angeles">
-                          <p class="services"><a title="Fireplace Repair Los Angeles" href="/services/fireplace-repair"><b>Fireplace Repair</p>
-                          <a class="grid-a" title="Expert fireplace repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+                          <p class="services"><a title="Fireplace Repair Los Angeles" href="/services/fireplace-repair"><b>Fireplace Repair</b></a></p>
+                          <a class="grid-a" title="Book Same Day Appliance Repair Services" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
                         </span>
+                      
 
-                                          <span class="col-twelve-img">
+                          <span class="col-twelve-img">
                           <img width="120" height="150" src="images/bbq-grill-repair.webp" alt="Same day bbq grill repair - Los Angeles">
                           <p class="services"><a title="Fireplace Repair Los Angeles" href="/services/fireplace-repair"><b>BBQ Grill Repair</b></a></p>
-                          <a class="grid-a" title="Same day bbq grill repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+                          <a class="grid-a" title="Book Same Day Appliance Repair Services" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
                         </span>
                        </div>
           
@@ -109,7 +110,7 @@ import Layout from "@layouts/Layout.astro";
   <span class="col-one-img">
                       <img width="120" height="150" loading="lazy" src="images/commercial-refrigerator-repair.webp" alt="Same day commercial refrigerator repair - Los Angeles">
                       <p class="services"><a title="Commercial refrigerator Repair Los Angeles" href="/services/commercial-refrigerator-repair-los-angeles"><b>Refrigerator Repair</b></a></p>
-                          <a class="grid-a" title="Same day refrigerator repair Los Angeles" href="/book">BOOK US </a>
+                          <a class="grid-a" title="Book Same Day Appliance Repair Services" href="/book">BOOK US </a>
                         </span>
 
                   <span class="col-two-img">
