--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -30,7 +30,7 @@ const menuitems = [
     title: "Service Areas",
     path: "/areas/los-angeles-and-surrounding-areas",
     children: [
-    { title: "Los Angees", path: "/areas//los-angeles" },
+    { title: "Los Angeles", path: "/areas//los-angeles" },
     { title: "Pasadena", path: "/areas//pasadena" },  
     { title: "Los Feliz", path: "/areas/los-feliz" },
       { title: "Marina Del Rey", path: "/areas/marina-del-rey" },
