--- a/src/components/cta.astro
+++ b/src/components/cta.astro
@@ -2,7 +2,7 @@
 import Link from "./ui/link.astro";
 import { Icon } from "astro-icon";
 ---
-<iframe loading="lazy" width="100%" height="400" title="Same Day APpliance Repair - areas we serve" src="https://www.google.com/maps/d/embed?mid=1lHknpypJgYmS76jKlDUvP0iU8B0lrZs&ehbc=2E312F" style="border:0;"></iframe>
+<iframe loading="lazy" width="100%" height="400" title="Same Day APpliance Repair - areas we serve" src="https://www.google.com/maps/d/u/2/embed?mid=1WYfJlezd7yel0cIXNhjCrg5PrRJVxh0&ehbc=2E312F" style="border:0;"></iframe>
 <div
   class="bg-black p-8 md:px-20 md:py-20 mt-20 mx-auto max-w-5xl rounded-lg flex flex-col items-center text-center">
 
