--- a/src/pages/services/refrigerator-repair.astro
+++ b/src/pages/services/refrigerator-repair.astro
@@ -20,7 +20,7 @@ import Layout from "@layouts/Layout.astro";
         </div></div>
   <h2>Welcome to Same-Day Appliance Repair Service</h2>
   <iframe width="315" height="560"
-src="https://www.youtube.com/watch?v=/eLwxasb5pcY"
+src="https://youtube.com/shorts/eLwxasb5pcY?si=PQSeihe4iDKmLbtb"
 title="YouTube video player"
 frameborder="0"
 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
