--- a/src/pages/services/refrigerator-repair.astro
+++ b/src/pages/services/refrigerator-repair.astro
@@ -13,7 +13,7 @@ import Layout from "@layouts/Layout.astro";
 <div class="content">
  <h1 class="top"><span class="animate-charcter">Refrigerator Repair</span> Los Angeles, CA, & Surrounding Areas</h1>
     <div class="two-col-grid"><div class="col-one">
-        <img class="img-header" src="/images/same-day-refrigerator-repair-los-angeles-and-surrounding-areas.webp" width="500" height="502" alt="Refrogerator Repair in Los Angeles and Surrounding Areas">
+        <img class="img-header" src="/images/same-day-refrigerator-repair-los-angeles-and-surrounding-areas.webp" width="500" height="502" alt="Refrogerator Repair Los Angeles">
         <Contactbtn />
     </div>
     <div class="col-two">
