--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -24,6 +24,7 @@ const menuitems = [
     { title: "____________________" },
     { title: "Commercial Refrigerator Repair", path: "/services/commercial-refrigerator-repair-los-angeles" },
     { title: "Commercial Freezer Repair", path: "/services/commercial-freezer-repair" },
+    { title: "Commercial Dishwasher Repair", path: "/services/commercial-dishwasher-repair"},
     
     ],
   },
