--- a/src/pages/services/commercial-freezer-repair.astro
+++ b/src/pages/services/commercial-freezer-repair.astro
@@ -14,7 +14,7 @@ import Layout from "@layouts/Layout.astro";
         <h1><span class="animate-charcter">Commercial Freezer Repair</span> in Los Angeles and Surrounding Areas</h1>
      
      <div class="two-col-grid"><div class="col-one"><img class="img-header" src="/images/same-day-freezer-repair-los-angeles.webp" width="600" height="250" alt="Professional Appliance Repair Los Angeles - technician working on a dishwasher">
-     <caption><b>Same-Day Commercial Freezer Repair</b> </caption>
+     <figcaption><b>Same-Day Commercial Freezer Repair</b> </figcaption>
      <Contactbtn />
      
      </div>
