--- a/src/pages/services/oven-repair.astro
+++ b/src/pages/services/oven-repair.astro
@@ -11,7 +11,7 @@ import Layout from "@layouts/Layout.astro";
 <Layout title="Same Day Oven Repair">
 <Container>
     <main>
-        <h1><span class="animate-charcter">Same-Day Oven Repair</span> in Los Angeles and Surrounding Areas</h1>
+        <h1><span class="animate-charcter">Same Day Oven Repair</span> in Los Angeles and Surrounding Areas</h1>
      
      <div class="two-col-grid"><div class="col-one"><img class="img-header" src="/images/same-day-oven-repair-los-angeles-and-surrounding-areas.webp" width="500" height="500" alt="Oven Repair Services Los Angeles - technician repairing an oven">   
      <Contactbtn />
