--- a/src/pages/services/range-hood-repair.astro
+++ b/src/pages/services/range-hood-repair.astro
@@ -11,7 +11,7 @@ import Layout from "@layouts/Layout.astro";
 <Layout title="Same Day Range Hood Range Repair">
 <Container>
     <main>
-        <h1><span class="animate-charcter">Same-Day Hood Range Repair</span> in Los Angeles and Surrounding Areas</h1>
+        <h1><span class="animate-charcter">Same Day Hood Range Repair</span> in Los Angeles and Surrounding Areas</h1>
      
      <div class="two-col-grid"><div class="col-one"><img class="img-header" src="/images/range-hood-repair-los-angeles-and-surrounding-area.webp" width="500" height="500" alt="Range Hood Repair Services Los Angeles - technician repairing an oven">   
      <Contactbtn />
