--- a/src/pages/services/stove-repair.astro
+++ b/src/pages/services/stove-repair.astro
@@ -11,7 +11,7 @@ import Layout from "@layouts/Layout.astro";
 <Layout title="Same Day Stove Repair">
 <Container>
     <main>
-        <h1><span class="animate-charcter">Same-Day Stove Repair</span> in Los Angeles and Surrounding Areas</h1>
+        <h1><span class="animate-charcter">Same Day Stove Repair</span> in Los Angeles and Surrounding Areas</h1>
      
      <div class="two-col-grid"><div class="col-one"><img class="img-header" src="/images/stove-reapir-los-angeles-and-surrounding-areas.webp" width="500" height="500" alt="Stove Repair Services Los Angeles - technician repairing a dryer">
      
