--- a/src/pages/services/cooktop-repair.astro
+++ b/src/pages/services/cooktop-repair.astro
@@ -11,7 +11,7 @@ import Layout from "@layouts/Layout.astro";
 <Layout title="Same Day Cooktop Repair">
 <Container>
     <main>
-        <h1><span class="animate-charcter">Same-Day Cooktop Repair</span> in Los Angeles and Surrounding Areas</h1>
+        <h1><span class="animate-charcter">Same Day Cooktop Repair</span> in Los Angeles and Surrounding Areas</h1>
      
      <div class="two-col-grid"><div class="col-one"><img class="img-header" src="/images/cooktop-repair-los-angeles-and-surrounding-areas.webp" width="500" height="500" alt="Cooktop Repair Services Los Angeles - technician repairing a cooktop">
      
