--- a/src/pages/services/dryer-repair.astro
+++ b/src/pages/services/dryer-repair.astro
@@ -11,7 +11,7 @@ import Layout from "@layouts/Layout.astro";
 <Layout title="Same Day Dryer Repair">
 <Container>
     <main>
-        <h1><span class="animate-charcter">Same-Day Dryer Repair</span> in Los Angeles and Surrounding Areas</h1>
+        <h1><span class="animate-charcter">Same Day Dryer Repair</span> in Los Angeles and Surrounding Areas</h1>
      
      <div class="two-col-grid"><div class="col-one"><img class="img-header" src="/images/same-day-dryer-repair-service-los-angeles-and-surrounding-area.webp" width="500" height="500" alt="Dryer Repair Services Los Angeles - technician repairing a dryer">
      
