--- a/src/pages/services/fireplace-repair.astro
+++ b/src/pages/services/fireplace-repair.astro
@@ -11,7 +11,7 @@ import Layout from "@layouts/Layout.astro";
 <Layout title="Same Day Fireplace Repair">
 <Container>
     <main>
-        <h1><span class="animate-charcter">Same-Day Fireplace Repair</span> in Los Angeles and Surrounding Areas</h1>
+        <h1><span class="animate-charcter">Same Day Fireplace Repair</span> in Los Angeles and Surrounding Areas</h1>
      
      <div class="two-col-grid"><div class="col-one"><img class="img-header" src="/images/fire-place-repair-los-angeles-and-surrounding-areas.webp" width="500" height="500" alt="Fireplace Repair Services Los Angeles - technician repairing a fireplace">
      
