--- a/src/pages/services/freezer-repair.astro
+++ b/src/pages/services/freezer-repair.astro
@@ -11,7 +11,7 @@ import Layout from "@layouts/Layout.astro";
 <Layout title="Same Day Freezer Repair">
 <Container>
     <main>
-        <h1><span class="animate-charcter">Same-Day Freezer Repair</span> in Los Angeles and Surrounding Areas</h1>
+        <h1><span class="animate-charcter">Same Day Freezer Repair</span> in Los Angeles and Surrounding Areas</h1>
      
      <div class="two-col-grid"><div class="col-one"><img class="img-header" src="/images/same-day-appliance-reapir-los-angeles.webp" width="600" height="232" alt="Professional Appliance Repair Los Angeles - technician working on a dishwasher">
      
