--- a/src/pages/services/refrigerator-repair.astro
+++ b/src/pages/services/refrigerator-repair.astro
@@ -11,7 +11,7 @@ import Layout from "@layouts/Layout.astro";
 <Layout title="Same Day Refrigerator Repair">
 <Container>
 <div class="content">
- <h1 class="top"><span class="animate-charcter">Refrigerator Repair</span> Los Angeles, CA, & Surrounding Areas</h1>
+ <h1 class="top"><span class="animate-charcter">Same Day Refrigerator Repair</span> Los Angeles, CA, & Surrounding Areas</h1>
     <div class="two-col-grid"><div class="col-one">
         <img class="img-header" src="/images/same-day-refrigerator-repair-los-angeles-and-surrounding-areas.webp" width="500" height="502" alt="Refrogerator Repair Los Angeles">
         <Contactbtn />
