--- a/src/pages/areas/culver-city.astro
+++ b/src/pages/areas/culver-city.astro
@@ -6,13 +6,13 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 ---
- <Layout title="">
+ <Layout title="Same Day Appliance Repair Culver City">
       <Container>
 <div class="content">
 <div style="background-color:#ebf0f5; padding:25px; border-radius: 25px;">
     Culver City
 
-    <h1>Appliance Repair Services in Culver City </h1>
+    <h1>Same Day Appliance Repair Culver City </h1>
     <h2>Welcome to Same Day Appliance Repair in Culver City</h2>
     <p> For Reliable Appliance Repair in Culver City, You've Found the Right Team.</p>
     <p>When it comes to your home appliances, Same Day Appliance Repair has the expertise to handle them all. With our extensive experience and knowledge, Culver City residents can trust us to tackle a wide range of appliance issues, from refrigerators to stoves and washers. Whether it's a simple switch replacement or a comprehensive compressor overhaul, our professional, certified, and fully insured technicians are committed to restoring your appliances to their optimal working condition. We are proficient in servicing all major appliance brands, including high-end names like Miele, Sub-Zero, Viking, Dacor, and Thermador.</p>
