--- a/src/pages/areas/los-angeles-and-surrounding-areas.astro
+++ b/src/pages/areas/los-angeles-and-surrounding-areas.astro
@@ -7,10 +7,10 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 ---
- <Layout title="Same Day Appliance Repair - Los Angeles: (424) 325-0520">
+ <Layout title="Same Day Appliance Repair Los Angeles: (424) 325-0520">
       <Container>
  <main>
-   <h1><span class="animate-charcter">Appliance Repair</span> in Los Angeles and Surrounding Areas</h1>
+   <h1><span class="animate-charcter">Same Day</span> Appliance Repair Los Angeles and Surrounding Areas</h1>
 
 <div class="two-col-grid"><div class="col-one"><img class="img-header" src="/images/same-day-appliance-reapir-los-angeles.webp" width="600" height="232" alt="Professional Appliance Repair Los Angeles - technician working on a dishwasher">
 
