--- a/src/pages/areas/marina-del-rey.astro
+++ b/src/pages/areas/marina-del-rey.astro
@@ -10,7 +10,7 @@ import Layout from "@layouts/Layout.astro";
       <Container>
 <div class="category category-0" style="background-color:#ffffff;">
     <div class="container">
-        <h1><span class="animate-charcter">Same-Day</span> Appliance Repair Marina Del Rey</h1>
+        <h1><span class="animate-charcter">Same Day</span> Appliance Repair Marina Del Rey</h1>
        
         <img style="border-radius: 25px;" class="responsiveimg" width="500" height="500" alt="Same-Day Appliance Repair Marina Del Rey - technician repairing a washer" src="/images/same-day-appliance-repair-marina-del-rey.webp">
 <caption><b>Same-Day Appliance Repair Marina Del Rey</b></caption>
