--- a/src/pages/areas/pasadena.astro
+++ b/src/pages/areas/pasadena.astro
@@ -9,10 +9,10 @@ import Layout from "@layouts/Layout.astro";
 
 
 ---
-<Layout title="Same Day Appliance Repair - Pasadena: (424) 325-0520">
+<Layout title="Same Day Appliance Repair Pasadena: (424) 325-0520">
 <Container>
 <div class="content">
-<h1 class="top"><span class="animate-charcter">Appliance Repair</span> Pasadena</h1>
+<h1 class="top"><span class="animate-charcter">Same Day</span> Appliance Repair Pasadena</h1>
    <div class="two-col-grid"><div class="col-one"><img class="img-header" src="/images/same-day-appliance-reapir-pasadena.webp" width="600" height="232" alt="Professional appliance repair technician working on a dishwasher">
        <Contactbtn />
    </div>
