--- a/src/pages/areas/santa-monica.astro
+++ b/src/pages/areas/santa-monica.astro
@@ -6,10 +6,10 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 ---
- <Layout title="Same Day Appliance Repair - Santa Monica: (424) 325-0520">
+ <Layout title="Same Day Appliance Repair Santa Monica: (424) 325-0520">
       <Container>
         <div style="background-color:#ebf0f5; padding:25px; border-radius: 25px;">
-            <h1>Same Day Appliance Repair - Santa Monica</h1>
+            <h1>Same Day Appliance Repair Santa Monica</h1>
                <img style="border-radius: 25px;" class="responsiveimg" width="600" height="600" alt="Los Feliz Same Day Apliance Repair" src="/images/same-day-appliance-repair-experts.webp">
                 <p>If your appliances need repair, you're at the right place. At Same Day Appliance Repair in Santa Monica, our skilled technicians excel in fixing both commercial and household appliances. We are committed to resolving various issues, from simple switch replacements to complex compressor overhauls, restoring your appliances to optimal working condition. Our expertise extends to servicing all major appliance brands, including renowned names like Sub-Zero, Viking, Dacor, and Thermador.</p>
                 <h2>Trusted and Efficient Appliance Repair - Santa Monica</h2>
