--- a/src/pages/areas/los-angeles.astro
+++ b/src/pages/areas/los-angeles.astro
@@ -7,10 +7,10 @@ import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import Contactbtn from "@components/contactbtn.astro";
 ---
-<Layout title="Appliance Repair Los ANgeles">
+<Layout title="Same Day Appliance Repair Los Angeles">
 <Container>
 <div class="content">
-<h1><span class="animate-charcter">Appliance Repair</span> Los Angeles</h1>
+<h1><span class="animate-charcter">Same Day</span> Appliance Repair Los Angeles</h1>
 
 
 <div class="two-col-grid"><div class="col-one"><img class="img-header" src="/images/same-day-appliance-reapir-los-angeles.webp" width="600" height="232" alt="Professional Appliance Repair Los Angeles - technician working on a dishwasher">
