--- a/src/pages/services/commercial-dishwasher-repair.astro
+++ b/src/pages/services/commercial-dishwasher-repair.astro
@@ -8,10 +8,10 @@ import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 
 ---
-<Layout title="Same Day Commercial Dishwasher Repair: Call:">
+<Layout title="Same Day Commercial Dishwasher Repair: Call: (424) 325-0520">
 <Container>
     <main>
-        <h1><span class="animate-charcter">Same Day Commercial Dishwasher</span> in Los Angeles and Surrounding Areas</h1>
+        <h1><span class="animate-charcter">Same Day Commercial Dishwasher</span> Los Angeles and Surrounding Areas</h1>
      <div class="two-col-grid"><div class="col-one">
       <img class="img-header" src="/images/commercial-dishwasher-repair-los-angeles.webp" width="500" height="500" alt="Commercial Dishwasher Repair - technician repairing a dishwasher.">
      <figcaption><b>Commercial Dishwasher Repair Los Angeles</b></figcaption>
