--- a/src/pages/services/commercial-freezer-repair.astro
+++ b/src/pages/services/commercial-freezer-repair.astro
@@ -8,7 +8,7 @@ import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 
 ---
-<Layout title="Same Day Commercial Freezer Repair">
+<Layout title="Same Day Commercial Freezer Repair Call: (424) 325-0520">
 <Container>
     <main>
         <h1><span class="animate-charcter">Same Day Commercial Freezer Repair</span> in Los Angeles and Surrounding Areas</h1>
