--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -25,6 +25,7 @@ const menuitems = [
     { title: "Commercial Refrigerator Repair", path: "/services/commercial-refrigerator-repair-los-angeles" },
     { title: "Commercial Freezer Repair", path: "/services/commercial-freezer-repair" },
     { title: "Commercial Dishwasher Repair", path: "/services/commercial-dishwasher-repair"},
+    { title: "Commercial Dryer Repair", path: "/services/commercial-dryer-repair"},
     
     ],
   },
