--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -115,13 +115,13 @@ import Layout from "@layouts/Layout.astro";
 
                   <span class="col-two-img">
                       <img width="120" height="150" loading="lazy" src="images/commercial-frreezer-repair.webp" alt="Same day commercial freezer repair - Los Angeles">
-                      <p>Freezer Repair</p>
+                      <p class="services"><a title="Commercial Freezer Repair Los Angeles" href="/services/commercial-freezer-repair-los-angeles"><b>Freezer Repair</b><a></a></p>
                            <a class="grid-a" title="Same day refrigerator repair Los Angeles" href="/book">BOOK US </a>
                         </span>
                   
                   <span class="col-three-img">
     <img width="120" height="150" loading="lazy" src="images/commercial-washer-repair.webp" alt="Same day commercial washer repair - Los Angeles">
-    <p>Washer Repair</p>
+    <p class="services"><a title="Commercial Dishwasher Repair Los Angeles" href="/services/commercial-dishwasher-repair-los-angeles"><b>Dishwasher Repair</b></a></p>
     <a class="grid-a" title="Same day washer repair Los Angeles" href="/book">BOOK US </a>
 </span>
                   
