--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -127,7 +127,7 @@ import Layout from "@layouts/Layout.astro";
                   
                   <span class="col-four-img">
     <img width="120" height="150" loading="lazy" src="images/commercial-dryer-repair.webp" alt="Same day commercial dryer repair - Los Angeles">
-    <p>Dryer Repair</p>
+    <p class="services"><a title="Commercial Dryer Repair Los Angeles" href="/services/commercial-dryer-repair-los-angeles"><b>Dryer Repair</b></a></p>
     <a class="grid-a" title="Same day dryer repair Los Angeles" href="/book">BOOK US</a>
 </span>
                   
