--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -46,7 +46,7 @@ const menuitems = [
     path: "/brands/commercial-and-household",
   },
   {
-    title: "Blog",
+    title: "Price List",
     path: "/blog",
   },
   {
