--- a/src/components/contactbtn.astro
+++ b/src/components/contactbtn.astro
@@ -3,5 +3,5 @@ import Link from "./ui/link.astro";
 ---
 <div style="margin: 0 auto 0 auto; width:325px;">
 <a style="width:95px; background-color:#000000; color:#ffffff; margin:0 5px 0 0; padding:10px; border-radius: 5px; display:inline-block;" title="Book an appointment with the Same Day Appliance Repair" href="/book">BOOK US </a>
-<a style="width:210px; background-color:#000000; color:#ffffff; padding:10px; border-radius: 5px; display:inline-block;" title="" href="tel:+1323540-5890">Call US: (323)540-5890</a>
+<a style="width:210px; background-color:#000000; color:#ffffff; padding:10px; border-radius: 5px; display:inline-block;" title="" href="tel:+14243250520">Call US: (424) 325-0520</a>
 </div>
