--- a/src/components/cta.astro
+++ b/src/components/cta.astro
@@ -2,6 +2,8 @@
 import Link from "./ui/link.astro";
 import { Icon } from "astro-icon";
 ---
+<p>Our skilled expert appliance repair technicians have extensive experience in servicing and maintaining appliances from leading brands across various locales in the Los Angeles Area. Their expertise enables us to provide a diverse array of local services for home appliances and businesses.</p>
+<p>We serve the following Los Angeles cities and surrounding areas: San Marino, <strong>Altadena, Alhambra </strong>Pasadena, South Pasadena, Santa Monica, Hollywood, West Hollywood Glendale, <strong>Highland Park, Verdugo Woodlands, Atwater Village, Glassell Park, Mount Washington, Eagle Rock</strong>, <strong>Highland Park, Cypress Park, Montecito Heights, Lincoln Heights, Verdugo Woodlands, East Hollywood, Beverly Hills, Hollywood Hills, Fairfax, Mid City, Downtown Los Angeles, Pacific Palisades, Point 18Big Rock, Eastern Malibu, Chinatown Los Angeles, Echo Park Los Angeles, Silver Lake, Westlake South, Los Feliz, Koreatown Marina Del Rey, Playa Del Rey, Venice, Culver City, Westdale, West Los Angeles, Northeast, Westwood, Ladera Heights, Bel Air, Beverly Glen, South Beverly Park, Trousdale Estates, The Bird Streets Beverly Ridge Estates, Holmby Hills.</strong></p>
 <iframe loading="lazy" width="100%" height="400" title="Same Day APpliance Repair - areas we serve" src="https://www.google.com/maps/d/u/2/embed?mid=1WYfJlezd7yel0cIXNhjCrg5PrRJVxh0&ehbc=2E312F" style="border:0;"></iframe>
 <div
   class="bg-black p-8 md:px-20 md:py-20 mt-20 mx-auto max-w-5xl rounded-lg flex flex-col items-center text-center">
