--- a/src/pages/areas/marina-del-rey.astro
+++ b/src/pages/areas/marina-del-rey.astro
@@ -82,7 +82,7 @@ import Layout from "@layouts/Layout.astro";
             &bull; Whirlpool<br>
             &bull; Wolf<br>
             &bull; And Others!<br></p>
-            <p>Same Day Appliance Repair Appliance Repair Quality Appliance Repair Service in Los Angeles County</p>
+            <p>Same Day Appliance Repair Appliance Repair Quality Appliance Repair Service in Marina Del Rey</p>
 </div>
 <Cta />
 </Container>
