--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,6 +1,7 @@
 ---
 import Contactform from "@components/contactform.astro";
 import Container from "@components/container.astro";
+import Cta from "@components/cta.astro";
 import Sectionhead from "@components/sectionhead.astro";
 import Layout from "@layouts/Layout.astro";
 import { Icon } from "astro-icon";
@@ -39,5 +40,6 @@ import { Icon } from "astro-icon";
         <Contactform />
       </div>
     </div>
+    <Cta />
   </Container>
 </Layout>
