--- a/src/pages/price-list/lg-dryer-repair-cost.astro
+++ b/src/pages/price-list/lg-dryer-repair-cost.astro
@@ -13,7 +13,7 @@ import Layout from "@layouts/Layout.astro";
     <main>
         <h1><span class="animate-charcter">LG Dryer Repair Cost:</span> Affordable, Efficient, and Reliable</h1>
      
-     <div class="two-col-grid"><div class="col-one"><img class="img-header" src="/images/bbq-grill-repair-los-angeles-and-surrounding-areas.webp" width="500" height="500" alt="LG DRyer Repair Cost">
+     <div class="two-col-grid"><div class="col-one"><img class="img-header" src="/images/lg-dryer-repair.webp" width="500" height="500" alt="LG DRyer Repair Cost">
      
      <Contactbtn />
      
