--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -434,6 +434,11 @@ input[type="checkbox"]:checked + .accordion-title .arrow {
 }
 /* links */
 .services {padding:10px 0 10px 0;}
+/*-Table*/
+.price{width:80px;padding: 0 0 0 25px;}
+.tdred{color:#f26366; border-bottom: #000000 2px dotted; padding:5px 0 10px 0;}
+.tdservice{padding:10px 0 0 0;}
+.redfont{color:#f26366; font-weight:900;}
     </style>
   </body>
 </html>
