--- a/src/pages/price-list/appliance-reapir-cost.astro
+++ b/src/pages/price-list/appliance-reapir-cost.astro
@@ -22,7 +22,7 @@ import Layout from "@layouts/Layout.astro";
      <div class="col-two">
        
       </div></div>
-  <p><a href="lg-dryer-repair-cost">Lg Dryer Repair Cost</a></p>
+  <p><a href="/lg-dryer-repair-cost">Lg Dryer Repair Cost</a></p>
 <Cta />
 </Container>
 </Layout>
