--- a/src/pages/price-list/lg-dryer-repair-cost.astro
+++ b/src/pages/price-list/lg-dryer-repair-cost.astro
@@ -22,7 +22,8 @@ import Layout from "@layouts/Layout.astro";
      <div class="col-two">
         <p style="text-align: start">Welcome to your go-to solution for LG dryer repairs, offering expert service right at your doorstep. We prioritize customer convenience, helping you decide between repair or replacement with ease which is why we provided the cost for most common LG dryer repairs in the table below.</p>
             <h2>Understanding LG Dryer Repair Costs</h2>
-            <p>The cost of LG dryer repair is a primary concern for our clients. We address this with straightforward pricing and comprehensive service. Although we may provide initial estimates over the phone based on your description, an in-person assessment is best for accuracy. Our technicians diagnose the issue, detail the required repairs, and provide a clear explanation and cost breakdown. A diagnostic service fee of $65 applies, which we'll waive if you proceed with the repair.  This includes a free dryer cleaning to enhance safety and efficiency. We provide a complimentary dryer cleaning service with each repair because we recognize the health risks and fire hazards posed by a dusty dryer. Accumulated dust not only endangers well-being but also forces your dryer to exert more effort, accelerating the wear and tear on its moving parts. This preventive measure ensures your dryer operates safely and efficiently, prolonging its lifespan.
+            <p>The cost of LG dryer repair is a primary concern for our clients. We address this with straightforward pricing and comprehensive service. Although we may provide initial estimates over the phone based on your description, an in-person assessment is best for accuracy. Our technicians diagnose the issue, detail the required repairs, and provide a clear explanation and cost breakdown.</p>
+            <p> A diagnostic service fee of $65 applies, which we'll waive if you proceed with the repair.  This includes a free dryer cleaning to enhance safety and efficiency. We provide a complimentary dryer cleaning service with each repair because we recognize the health risks and fire hazards posed by a dusty dryer. Accumulated dust not only endangers well-being but also forces your dryer to exert more effort, accelerating the wear and tear on its moving parts. This preventive measure ensures your dryer operates safely and efficiently, prolonging its lifespan.
             </p>
       </div></div>
   
@@ -30,7 +31,7 @@ import Layout from "@layouts/Layout.astro";
    <tbody>
    <tr>
        <tr>
-           <td class="tdservice"><a class="w" href="/price-list/LG-dryer-idler-pulley-replacement-cost">Rollers replacement cost *</a></td>
+           <td class="tdservice"><a class="w" href="/price-list/LG-dryer-idler-pulley-replacement-cost">LG dryer rollers replacement cost *</a></td>
            <td class="price">$200</td>
        </tr>
        <td class="tdred">LG dryer making noise or loud vibrating noise during drum rotation</td>
