--- a/src/pages/price-list/dryer-roller-replacement-cost.astro
+++ b/src/pages/price-list/dryer-roller-replacement-cost.astro
@@ -22,6 +22,7 @@ import Layout from "@layouts/Layout.astro";
      <div class="col-two">
         <p style="text-align: start">Welcome to your go-to solution for LG dryer repairs, offering expert service right at your doorstep. We prioritize customer convenience, helping you decide between repair or replacement with ease which is why we provided the cost for most common LG dryer repairs in the table below.</p>
         <p>Welcome to our dryer roller replacement page, our goal is to help you extend the life and improve the efficiency of your dryer. Over time, dryer rollers can wear out, causing noise, vibration, and reduced performance. Our expert service is designed to address these issues quickly and effectively, ensuring your dryer runs smoothly. Our company provides transparent prices for all appliance repair.</p>
+        <h2>The Dryer Roller Replacement Cost</h2>
         <p>The dryer roller replacement cost is $200, excluding parts. Initially, technicians will diagnose the specific issue for the service fee of $65. During this visit, he will detail the problem and provide a breakdown of costs. If you opt for the repair, the service fee is waived, and you only pay for the repair itself.</p>        
       </div></div>
   
