--- a/src/pages/price-list/lg-dryer-repair-cost.astro
+++ b/src/pages/price-list/lg-dryer-repair-cost.astro
@@ -29,14 +29,22 @@ import Layout from "@layouts/Layout.astro";
   
 <table style="font-size:1.5em; width:90%; margin:0 auto 0 auto;">
    <tbody>
-   <tr>
        <tr>
            <td class="tdservice"><a class="w" href="/price-list/dryer-roller-replacement-cost">LG dryer rollers replacement cost *</a></td>
            <td class="price">$200</td>
        </tr>
+       <tr>
        <td class="tdred">LG dryer making noise or loud vibrating noise during drum rotation</td>
        <td class="price"></td>
    </tr>
+   <tr>
+    <td class="tdservice"><a class="w" href="/price-list/dryer-vent-installation-cost">LG dryer vent installation *</a></td>
+    <td class="price">$200</td>
+</tr>
+<tr>
+<td class="tdred">LG dryer drying slow, builds excessive lint, overheating, creates mold or meldew oders and excessive humidity in the laundry room</td>
+<td class="price"></td>
+</tr>
    <tr>
        <td class="tdservice"><a class="w" href="/price-list/LG-dryer-idler-pulley-replacement-cost">LG dryer idler pulley replacement cost *</a></td>
        <td class="price">$220</td>
