--- a/src/pages/price-list/lg-dryer-repair-cost.astro
+++ b/src/pages/price-list/lg-dryer-repair-cost.astro
@@ -46,7 +46,7 @@ import Layout from "@layouts/Layout.astro";
 <td class="price"></td>
 </tr>
    <tr>
-       <td class="tdservice"><a class="w" href="/price-list/LG-dryer-idler-pulley-replacement-cost">LG dryer idler pulley replacement cost *</a></td>
+       <td class="tdservice">LG dryer idler pulley replacement cost *</td>
        <td class="price">$220</td>
    </tr>
    <tr>
@@ -56,17 +56,17 @@ import Layout from "@layouts/Layout.astro";
 
 
    <tr>
-       <td class="tdservice"><a class="w" href="/price-list/LG-dryer-motor-replacement-cost">LG dryer motor replacement cost *</a></td>
+       <td class="tdservice">LG dryer motor replacement cost *</td>
        <td class="price">$220</td>
    </tr>
    <tr>
-       <td class="tdred">LG dryer powers on but won’t start</td>
+       <td class="tdred">LG dryer powers on but won't start</td>
        <td class="price"></td>
    </tr>
 
 
    <tr>
-       <td class="tdservice"><a class="w" href="/price-list/LG-dryer-igniter-replacement-cost">LG dryer igniter replacement cost *</a></td>
+       <td class="tdservice">LG dryer igniter replacement cost *</td>
        <td class="price">$220</td>
    </tr>
    <tr>
@@ -76,7 +76,7 @@ import Layout from "@layouts/Layout.astro";
 
 
    <tr>
-       <td class="tdservice"><a class="w" href="/price-list/LG-dryer-heating-element-replacement-cost">LG dryer heating element replacement cost *</a></td>
+       <td class="tdservice">LG dryer heating element replacement cost *</td>
        <td class="price">$220 </td>
    </tr>
    <tr>
@@ -86,7 +86,7 @@ import Layout from "@layouts/Layout.astro";
 
 
    <tr>
-       <td class="tdservice"><a class="w" href="/price-list/LG-dryer-thermal-fuse-replacement-cost">LG dryer thermal fuse replacement cost *</a></td>
+       <td class="tdservice">LG dryer thermal fuse replacement cost *</td>
        <td class="price">$220</td>
    </tr>
    <tr>
@@ -96,9 +96,9 @@ import Layout from "@layouts/Layout.astro";
 
 
    <tr>
-       <td class="tdservice"><a class="w" href="/price-list/LG-dryer-vent-cleaning">LG dryer vent cleaning / dryer duct cleaning / clean dryer exhaust / clean out
+       <td class="tdservice">LG dryer vent cleaning / dryer duct cleaning / clean dryer exhaust / clean out
            dryer vent / clothes dryer vent cleaning cost *
-       </a> </td>
+        </td>
        <td class="price">$220 and up</td>
    </tr>
    <tr>
@@ -118,7 +118,7 @@ import Layout from "@layouts/Layout.astro";
 
 
    <tr>
-       <td class="tdservice"><a class="w" href="/price-list/LG-dryer-reverse-door-cost">LG dryer reverse door cost *</a></td>
+       <td class="tdservice">LG dryer reverse door cost *</td>
        <td class="price">$120</td>
    </tr>
    <tr>
@@ -128,7 +128,7 @@ import Layout from "@layouts/Layout.astro";
 
 
    <tr>
-       <td class="tdservice"><a class="w" href="/price-list/LG-dryer-door-lock-replacement-cost">LG dryer door lock replacement cost *</a></td>
+       <td class="tdservice">LG dryer door lock replacement cost *</td>
        <td class="price">$200</td>
    </tr>
    <tr>
@@ -136,7 +136,7 @@ import Layout from "@layouts/Layout.astro";
        <td class="price"></td>
    </tr>
    <tr>
-       <td class="tdservice"><a class="w" href="/price-list/Install-dryer-vent-cost">Install dryer vent cost/ dryer vent hook up *</a></td>
+       <td class="tdservice"></td>Install dryer vent cost/ dryer vent hook up *</td>
        <td class="price">$190</td>
    </tr>
    <tr>
@@ -144,7 +144,7 @@ import Layout from "@layouts/Layout.astro";
        <td class="price"></td>
    </tr>
    <tr>
-       <td class="tdservice"><a class="w" href="/price-list/Install-dryer-vent-cost">Install dryer vent cost / hook up gas dryer *</a></td>
+       <td class="tdservice">Install dryer vent cost / hook up gas dryer *</td>
        <td class="price">$190</td>
    </tr>
    <tr>
@@ -152,7 +152,7 @@ import Layout from "@layouts/Layout.astro";
        <td class="price"></td>
    </tr>
    <tr>
-       <td class="tdservice"><a class="w" href="/price-list/Dryer-and-washer-installation">Dryer and washer installation/ stackable washer dryer installation cost *</a></td>
+       <td class="tdservice">Dryer and washer installation/ stackable washer dryer installation cost *</td>
        <td class="price">$240</td>
    </tr>
    <tr>
@@ -160,7 +160,7 @@ import Layout from "@layouts/Layout.astro";
        <td class="price"></td>
    </tr>
    <tr>
-       <td class="tdservice"><a class="w" href="/price-list/LG-dryer-gas-valve-replacement-cost">LG dryer gas valve replacement cost *<a></td>
+       <td class="tdservice">LG dryer gas valve replacement cost *</td>
        <td class="price">$240</td>
    </tr>
    <tr>
@@ -168,7 +168,7 @@ import Layout from "@layouts/Layout.astro";
        <td class="price"></td>
    </tr>
    <tr>
-       <td class="tdservice"><a class="w" href="/price-list/LG-gas-valve-coils-replacement-cost">LG gas valve coils replacement cost *</a></td>
+       <td class="tdservice">LG gas valve coils replacement cost *</td>
        <td class="price">$190</td>
    </tr>
    <tr>
@@ -176,7 +176,7 @@ import Layout from "@layouts/Layout.astro";
        <td class="price"></td>
    </tr>
    <tr>
-       <td class="tdservice"><a class="w" href="/price-list/LG-dryer-maintenance-cost">LG dryer maintenance cost *</a></td>
+       <td class="tdservice">LG dryer maintenance cost *</td>
        <td class="price">$190</td>
    </tr>
    <tr>
