--- a/src/pages/price-list/dryer-roller-replacement-cost.astro
+++ b/src/pages/price-list/dryer-roller-replacement-cost.astro
@@ -47,6 +47,7 @@ import Layout from "@layouts/Layout.astro";
       <h3>Contact Us Today</h3>
       <p>Don't let a faulty dryer roller disrupt your routine. Contact us today to schedule a service appointment. Our friendly and knowledgeable staff are here to answer any questions and guide you through the repair process. Trust us to restore your dryer to its optimal performance with professional roller replacement services.</p>
       
-</Container>
-</Layout>
-
+      <Cta />
+    </Container>
+    </Layout>
+    
