--- a/src/pages/price-list/dryer-vent-installation-cost.astro
+++ b/src/pages/price-list/dryer-vent-installation-cost.astro
@@ -74,7 +74,7 @@ import Layout from "@layouts/Layout.astro";
       
       <h2>Contact Us for a Quote</h2>
       <p>Ready to enhance the safety and efficiency of your dryer? Contact us today for a personalized quote for dryer vent installation. Our friendly team is here to answer your questions and schedule a convenient installation appointment. Trust us for reliable and cost-effective dryer vent installation services.</p>
-      
+      <Cta />
 </Container>
 </Layout>
 
