--- a/src/pages/price-list/lg-dryer-repair-cost.astro
+++ b/src/pages/price-list/lg-dryer-repair-cost.astro
@@ -203,7 +203,6 @@ import Layout from "@layouts/Layout.astro";
 <h2>Ensuring Quality Repairs</h2>
 <p>Our expertise in LG dryer repairs ensures high-quality service using genuine parts. Unlike others who may use non-standard parts, risking further damage, we guarantee lasting repairs by adhering to LG's specifications. Our skilled team promises a thorough, effective repair process, reducing future issues and extending your dryer's lifespan. Plus, every repair includes a dryer cleaning to maintain peak performance.</p>
 <p>LG Dryer Repair, leveraging original parts, skilled technicians, and a commitment to customer satisfaction. Don't hesitate to call us to restore your LG dryer to optimal condition.</p>
-
+<Cta />
 </Container>
 </Layout>
-
