--- a/src/pages/price-list/lg-dryer-repair-cost.astro
+++ b/src/pages/price-list/lg-dryer-repair-cost.astro
@@ -136,7 +136,7 @@ import Layout from "@layouts/Layout.astro";
        <td class="price"></td>
    </tr>
    <tr>
-       <td class="tdservice"></td>Install dryer vent cost/ dryer vent hook up *</td>
+       <td class="tdservice">Install dryer vent cost/ dryer vent hook up *</td>
        <td class="price">$190</td>
    </tr>
    <tr>
