--- a/src/pages/price-list/lg-dryer-repair-cost.astro
+++ b/src/pages/price-list/lg-dryer-repair-cost.astro
@@ -30,7 +30,7 @@ import Layout from "@layouts/Layout.astro";
 <table style="font-size:1.5em; width:90%; margin:0 auto 0 auto;">
    <tbody>
        <tr>
-           <td class="tdservice"><a class="w" href="/price-list/dryer-roller-replacement-cost">LG dryer rollers replacement cost *</a></td>
+           <td class="tdservice"><a class="w" href="/price-list/dryer-roller-replacement-cost">LG dryer rollers replacement cost*</a></td>
            <td class="price">$200</td>
        </tr>
        <tr>
@@ -38,7 +38,23 @@ import Layout from "@layouts/Layout.astro";
        <td class="price"></td>
    </tr>
    <tr>
-    <td class="tdservice"><a class="w" href="/price-list/dryer-vent-installation-cost">LG dryer vent installation *</a></td>
+    <td class="tdservice"><a class="w" href="/price-list/dryer-vent-installation-cost">LG dryer vent installation cost*</a></td>
+    <td class="price">$190</td>
+</tr>
+<tr>
+<td class="tdred">LG dryer drying slow, builds excessive lint, overheating, creates mold or meldew oders and excessive humidity in the laundry room</td>
+<td class="price"></td>
+</tr>
+<tr>
+    <td class="tdservice"><a class="w" href="/price-list/dryer-vent-repair-cost">LG dryer vent repair cost*</a></td>
+    <td class="price">$190</td>
+</tr>
+<tr>
+<td class="tdred">LG dryer drying slow, builds excessive lint, overheating, creates mold or meldew oders and excessive humidity in the laundry room</td>
+<td class="price"></td>
+</tr>
+<tr>
+    <td class="tdservice"><a class="w" href="/price-list/dryer-vent-installation-cost">LG dryer vent repair cost*</a></td>
     <td class="price">$190</td>
 </tr>
 <tr>
