--- a/src/pages/price-list/lg-dryer-repair-cost.astro
+++ b/src/pages/price-list/lg-dryer-repair-cost.astro
@@ -62,7 +62,7 @@ import Layout from "@layouts/Layout.astro";
 <td class="price"></td>
 </tr>
    <tr>
-       <td class="tdservice">LG dryer idler pulley replacement cost *</td>
+       <td class="tdservice"><a class="w" href="/price-list/dryer-idler-pulley-replacement-cost">LG dryer idler pulley replacement cost *</a></td>
        <td class="price">$220</td>
    </tr>
    <tr>
